Fix btn-file text vertical alignment on smaller screens

--- a/app/styles/elements/_buttons.scss
+++ b/app/styles/elements/_buttons.scss
@@ -144,6 +144,9 @@ input[type="button"].btn-block,
 .btn-file {
   position: relative;
   overflow: hidden;
+  @media (max-width:$screen-s-max) {
+    padding: 9px 12px;
+  }
 }
 .btn-file input[type=file] {
   position: absolute;
